Fix overflows
and remove more redundant styles

--- a/compass/sass/media/_screen.scss
+++ b/compass/sass/media/_screen.scss
@@ -4,14 +4,6 @@
  
 @media screen {
 
-    /* -------------------------------------------------------------------------*/
-    /* Layout */
-    html {
-        @include background-image(linear-gradient(#414141,#333333));
-        
-        min-height: 100%;
-    }
-
     /* ----------------------------------------------------------------------------
        Main content
        --------------------------------------------------------------------------*/
